--- a/notebooks/03.visualizations.ipynb
+++ b/notebooks/03.visualizations.ipynb
@@ -526,18 +526,20 @@
     "\n",
     "## Summary\n",
     "\n",
-    "The visuals above provide a clear picture of how Manchester United’s\n",
-    "midfield dynamics shift in matches where Bruno and Casemiro start together.\n",
+    "The visuals above provide a clear picture of how Manchester United’s midfield dynamics shift in matches where Bruno and Casemiro start together.\n",
     "\n",
     "Key insights identified:\n",
     "\n",
-    "- Bruno consistently leads progression load, typically carrying **65–78%**.\n",
-    "- Casemiro provides more **defensive stability**, with peaks above **5 Tkl+Int per 90**.\n",
-    "- Creativity output fluctuates by opponent, with clear spikes in home fixtures.\n",
-    "- Combined defensive intensity tends to predict overall match control.\n",
+    "• Bruno consistently carries the majority of the progression load, typically accounting for 65–78% of total forward advancement.\n",
     "\n",
-    "These visuals feed directly into the radar profiles and the final club-style\n",
-    "report created in the following notebook.\n"
+    "• Casemiro provides defensive stability and control in central areas, with peaks above 5 Tkl+Int per 90 in high-control matches.\n",
+    "\n",
+    "• Defensive intensity tends to correlate with match control — when total ball recoveries drop, United’s midfield looks less stable.\n",
+    "\n",
+    "• Bruno’s progression share fluctuates by opponent and game state, indicating how much of United’s buildup depends on his availability between lines.\n",
+    "\n",
+    "These visuals feed directly into the radar profiles and the final club-style report created in the following notebook.\n",
+    "\n"
    ]
   }
  ],
